feat: develop admin frontend pages and integrate header & footer

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,13 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/css/main.css" />
-    <script src="/js/main.js"></script>
-  </head>
-  <body>
-    <div class="format1">TEST</div>
-  </body>
-</html>
+<%- include('includes/header') %>
+<body>
+  <div class="card" style="width: 18rem">
+    <img
+      src="https://i.pinimg.com/736x/25/38/e7/2538e73b17b4bb1f9f8fa0132faaacf4.jpg"
+      class="card-img-top"
+      alt="..."
+    />
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk
+        of the card's content.
+      </p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+</body>
+<%- include('includes/footer') %>
