feat: locals varibale integration

--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -1,5 +1,8 @@
 <%- include('includes/header') %>
 <body>
-  <div style="font-size: large">products</div>
+  <div>
+    <div>products</div>
+    <div><%=member.memberNick%></div>
+  </div>
 </body>
 <%- include('includes/footer') %>
