fix: getAllProducts api and passing data into ejs

--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -3,6 +3,10 @@
   <div>
     <div>products</div>
     <div><%=member.memberNick%></div>
+    <% products.map((value, key) => { %>
+    <p><%= value.productName %>-<%= value.productSize%></p>
+
+    <% }) %>
   </div>
 </body>
 <%- include('includes/footer') %>
