feat: create new product frontend logic

--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -43,7 +43,7 @@
                 <th scope="col">Status</th>
               </tr>
             </thead>
-            <!--  LOOP PRODUCTS: START  -->
+        
             <% products.map(function(value,key){%>
             <tbody style="background: white">
               <td><%=key+1%></td>
@@ -60,14 +60,14 @@
                   class="spec-select new-product-status"
                   id="<%= value._id%>"
                 >
-                  <option value="PAUSE"<%= value.productStatus=== 'PAUSE'? 'selected': '' %> >PAUSE</option>
-                  <option value="PROCESS"<%= value.productStatus=== 'PROCESS'? 'selected': '' %>>PROCESS</option>
-                  <option value="DELETE"<%= value.productStatus=== 'DELETE'? 'selected': '' %>>DELETE</option>
+                  <option value="PAUSE"<%= value.productStatus === 'PAUSE'? 'selected': '' %> >PAUSE   </option>
+                  <option value="PROCESS"<%= value.productStatus === 'PROCESS'? 'selected': '' %> >PROCESS </option>
+                  <option value="DELETE"<%= value.productStatus === 'DELETE'? 'selected': '' %> >DELETE </option>
                 </select>
               </td>
             </tbody>
             <% })%>
-            <!--  LOOP PRODUCTS: END  -->
+         
           </table>
           <div
             class="long-input"
@@ -78,7 +78,9 @@
             </button>
           </div>
         </div>
+
         <form
+        onsubmit="return validateForm()"
           action="/admin/product/create"
           method="POST"
           class="dish-container"
@@ -149,10 +151,10 @@
             <div class="half-input" id="product-volume" style="display: none">
               <label>Drink Volume</label>
               <select class="product-volume" name="productVolume">
-                <option value="0.5">0,5 liters</option>
+                <option value="0.5">0.5 liters</option>
                 <option value="1" selected>1 liters</option>
-                <option value="1.2">1,2 liters</option>
-                <option value="1.5">1,5 liters</option>
+                <option value="1.2">1.2 liters</option>
+                <option value="1.5">1.5 liters</option>
                 <option value="2">2 liters</option>
               </select>
             </div>
@@ -173,6 +175,7 @@
                   name="productImages"
                   class="image-one"
                   required
+                  onchange="previewFileHandler(this,1)"
                 />
               </div>
               <div class="upload-img-box">
@@ -182,6 +185,7 @@
                   id="file"
                   name="productImages"
                   class="image-two"
+                    onchange="previewFileHandler(this,2)"
                 />
               </div>
               <div class="upload-img-box">
@@ -191,6 +195,7 @@
                   id="file"
                   name="productImages"
                   class="image-three"
+                    onchange="previewFileHandler(this,3)"
                 />
               </div>
               <div class="upload-img-box">
@@ -200,6 +205,7 @@
                   id="file"
                   name="productImages"
                   class="image-four"
+                    onchange="previewFileHandler(this,4)"
                 />
               </div>
               <div class="upload-img-box">
@@ -209,6 +215,7 @@
                   id="file"
                   name="productImages"
                   class="image-five"
+                    onchange="previewFileHandler(this,5)"
                 />
               </div>
               <input name="restaurantIid" class="restaurant-id" hidden />
